--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,3 +1,4 @@
 
 <hr>
-<p> {{ 'Server' }} with id {{serverId}} is {{ getServerStatus()}}</p>
+<p  [ngStyle]="{backgroundColor: getColor()}"
+[ngClass]="{online: serverStatus === 'online'}"> {{ 'Server' }} with id {{serverId}} is {{ getServerStatus()}}</p>
