--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -4,7 +4,13 @@
 
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()"> Add Server !</button>
 
-<p>{{serverName}}</p>
-<p>{{serverCreationStatus}}</p>
+<!--<p>{{serverName}}</p>-->
+<!--<p>{{serverCreationStatus}}</p>-->
 
-<app-server></app-server>
+
+<p *ngIf="serverCreated; else noServer">Server was created, server name is {{serverName}}</p>
+<ng-template #noServer>
+  <p>No server was created !</p>
+</ng-template>
+<app-server *ngFor="let server of servers"></app-server>
+
